--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <!--導覽列-->
     <div class="border-5 border-bottom border-warning">
-        <nav class="container navbar navbar-expand-lg navbar-light">
+        <nav class="container navbar navbar-expand-md navbar-light">
             <div class="container-fluid">
             <a class="navbar-brand logo" href="#">拼拼募資</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -23,13 +23,16 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <div class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <a class="nav-link px-4 active" aria-current="page" href="#">關於</a>
-                    <a class="nav-link px-4" href="#">挖寶</a>
-                    <a class="nav-link px-4" href="#">我有個大膽的想法</a>
-                  </div>
-                <form class="d-flex">
+                    <a class="nav-link px-lg-4 px-md-3 active" aria-current="page" href="#">關於</a>
+                    <a class="nav-link px-lg-4 px-md-3" href="#">挖寶</a>
+                    <a class="nav-link px-lg-4 px-md-3" href="#">我有個大膽的想法</a>
+                </div>
+                <div class="d-flex">
                     <!-- Button trigger modal -->
                     <button type="button" class="btn btn-warning rounded-pill px-5 me-3" data-bs-toggle="modal" data-bs-target="#loginModal">登入</button>
+                    <button class="btn btn-outline-secondary rounded-pill px-5" type="submit">註冊</button>
+                </div>
+                <form>
                     <!-- Modal -->
                     <div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="loginModalLabel" aria-hidden="true">
                         <div class="modal-dialog">
@@ -66,7 +69,6 @@
                         </div>
                         </div>
                     </div>
-                <button class="btn btn-outline-secondary rounded-pill px-5" type="submit">註冊</button>
                 </form>
             </div>
             </div>
@@ -74,14 +76,14 @@
     </div>
     <!--募資品圖片、進度-->
     <div class="bg-lightGray py-5">
-        <div class="container pb-5">
+        <div class="container pb-lg-5">
             <span class="badge bg-secondary mb-2">魔法科技</span>
             <h1 class="fw-bold mb-4">拍出會動的照片｜LivePhotos 魔法拍立得</h1>
             <div class="row">
-                <div class="col-md-7">
-                    <img class="w-100 productImg" src="img/product_image.jpg" alt="">
+                <div class="col-lg-7">
+                    <img class="img-fluid productImg" src="img/product_image.jpg" alt="">
                 </div>
-                <div class="col-md-5">
+                <div class="col-lg-5 col-md-6">
                     <p class="h6">目標 $600,000</p>
                     <p class="fs-1 fw-bold mb-4">$280,047</p>
                     <div class="progress rounded-pill mb-4">
@@ -95,7 +97,7 @@
                         <div class="w-50">
                             <p class="h6">募資倒數</p>
                             <p class="fs-1 balooTamma-bold my-3">27天</p>
-                        </div> 
+                        </div>
                     </div>
                     <div class="iconContent d-flex justify-content-between mb-3">
                         <img src="img/icon_good01.svg" width="24px;" data-bs-toggle="tooltip" data-bs-placement="top" title="認證標章" alt="iconGood01">
@@ -103,7 +105,7 @@
                         <img src="img/icon_good03.svg" width="24px;" data-bs-toggle="tooltip" data-bs-placement="top" title="原生創意" alt="iconGood03">
                         <img src="img/icon_good04.svg" width="24px;" data-bs-toggle="tooltip" data-bs-placement="top" title="人氣王" alt="iconGood04">
                     </div>
-                        <p class="bg-white callout-warning py-3 mb-4">專案募資中！<br>在 <span class="fw-bold">2021/06/14 23:59</span> 募資結束前，您都可以贊助我們！</p>
+                    <p class="bg-white callout-warning py-3 mb-4">專案募資中！<br>在 <span class="fw-bold">2021/06/14 23:59</span> 募資結束前，您都可以贊助我們！</p>
                     <a href="" class="btn btn-lg btn-warning rounded-pill w-100 mb-2 hover-red">贊助專案</a>
                     <div class="d-flex">
                         <p class="me-2" style="width: 60%;">
@@ -126,15 +128,17 @@
     <!--內容導覽列-->
     <div class="navContent mb-6 position-sticky" style="top:0; z-index: 1;">
         <div class="container">
-            <nav class="nav" id="nav-tab" role="tablist">
-                  <a class="nav-link btn btn-link text-secondary py-4 active" id="introduce-tab" data-bs-toggle="tab" data-bs-target="#introduce" role="tab" aria-controls="introduce" aria-selected="true">專案介紹</a>
-
-                  <a class="nav-link btn btn-link text-secondary py-4" id="faq-tab" data-bs-toggle="tab" data-bs-target="#faq" role="tab" aria-controls="faq" aria-selected="false">常見問題</a>
-
-                  <a class="nav-link btn btn-link text-secondary py-4" id="progress-tab" data-bs-toggle="tab" data-bs-target="#progress" role="tab" aria-controls="progress" aria-selected="false">目前進度</a>
-
-                  <a class="nav-link btn btn-link text-secondary py-4" id="message-tab" data-bs-toggle="tab" data-bs-target="#message" role="tab" aria-controls="message" aria-selected="false">留言</a>
-            </nav>
+            <div class="row">
+                <nav class="col-xl-4 nav nav-fill" id="nav-tab" role="tablist">
+                    <a class="nav-link btn btn-link text-secondary py-4 rounded-0 active" id="introduce-tab" data-bs-toggle="tab" data-bs-target="#introduce" role="tab" aria-controls="introduce" aria-selected="true">專案介紹</a>
+  
+                    <a class="nav-link btn btn-link text-secondary py-4 rounded-0" id="faq-tab" data-bs-toggle="tab" data-bs-target="#faq" role="tab" aria-controls="faq" aria-selected="false">常見問題</a>
+  
+                    <a class="nav-link btn btn-link text-secondary py-4 rounded-0" id="progress-tab" data-bs-toggle="tab" data-bs-target="#progress" role="tab" aria-controls="progress" aria-selected="false">目前進度</a>
+  
+                    <a class="nav-link btn btn-link text-secondary py-4 rounded-0" id="message-tab" data-bs-toggle="tab" data-bs-target="#message" role="tab" aria-controls="message" aria-selected="false">留言</a>
+              </nav>
+            </div>
         </div>
     </div>
     <!--下方內容-->
@@ -143,11 +147,11 @@
             <div class="col-md-8">
                 <div class="tab-content mb-6" id="nav-tabContent">
                     <!--introduce-->
-                    <div class="tab-pane fade" id="introduce" role="tabpanel" aria-labelledby="introduce-tab">
-                        <img class="w-100 mb-4" src="img/p1.jpg"  alt="">
+                    <div class="tab-pane fade  show active" id="introduce" role="tabpanel" aria-labelledby="introduce-tab">
+                        <img class="img-fluid mb-4" src="img/p1.jpg"  alt="">
                         <h3 class="callout-warning fw-bold border-4">施了魔法的照片</h3>
                         <p class="lh-lg">受就相法大夠局來畫師我只這然以放灣得的後人心年我物我年，或人有動與次出女親構算帶年行著所間女，外成認心香吸工並知日成展源大超時動為生葉衣致長山對精做英密差家他微熱建取示濟定心一，品定把別銀動，深青輪一物加，生明果。西業白老如天有表非民大條全那遊，李文遊、像香過元學須本致信校態麼資司媽人價在它，地他不我計孩廠然不大指勢生的華常簡岸然，人著母病石金萬得一果。</p>
-                        <img class="w-100 mb-4" src="img/p2.jpg" alt="">
+                        <img class="img-fluid mb-4" src="img/p2.jpg" alt="">
                         <h3 class="callout-warning fw-bold border-4">留下當下的美好</h3>
                         <p class="lh-lg">受就相法大夠局來畫師我只這然以放灣得的後人心年我物我年，或人有動與次出女親構算帶年行著所間女，外成認心香吸工並知日成展源大超時動為生葉衣致長山對精做英密差家他微熱建取示濟定心一，品定把別銀動，深青輪一物加，生明果。西業白老如天有表非民大條全那遊，李文遊、像香過元學須本致信校態麼資司媽人價在它，地他不我計孩廠然不大指勢生的華常簡岸然，人著母病石金萬得一果。</p>
                     </div>
@@ -230,43 +234,43 @@
                         </div>
                     </div>
                     <!--progress-->
-                    <div class="tab-pane fade  show active" id="progress" role="tabpanel" aria-labelledby="progress-tab">
+                    <div class="tab-pane fade" id="progress" role="tabpanel" aria-labelledby="progress-tab">
                         <div class="card border-0">
                             <div class="row g-0 border-lightGray mb-3">
-                              <div class="col-md-4">
-                                <img class="w-100 rounded-start" src="img/news01.jpg" alt="new01">
+                              <div class="col-sm-4">
+                                <img class="img-fluid rounded-start" src="img/news01.jpg" alt="new01">
                               </div>
-                              <div class="col-md-8">
+                              <div class="col-sm-8">
                                 <div class="card-body fs-6">
                                   <h2 class="card-title fs-5 fw-bold">高雄體驗會｜免費參加送帆布袋</h2>
                                   <p class="balooTamma text-secondary">2021-6-20</p>
-                                  <p class="card-text text-secondary text-align-justify">大家安安！謝謝每位贊助者的熱情支持，讓我們離夢想更進一步，我們將於下個月舉辦體驗會，歡迎各位踴躍參與！</p>
+                                  <p class="card-text text-secondary text-align-justify d-none d-md-block">大家安安！謝謝每位贊助者的熱情支持，讓我們離夢想更進一步，我們將於下個月舉辦體驗會，歡迎各位踴躍參與！</p>
                                   <a href="#" class="balooTamma-bold btn btn-link text-danger ps-0">MORE</a href="#">
                                 </div>
                               </div>
                             </div>
                             <div class="row g-0 border-lightGray mb-3">
-                                <div class="col-md-4">
-                                  <img class="w-100 rounded-start" src="img/news02.jpg" alt="new01">
+                                <div class="col-sm-4">
+                                  <img class="img-fluid rounded-start" src="img/news02.jpg" alt="new01">
                                 </div>
-                                <div class="col-md-8">
+                                <div class="col-sm-8">
                                   <div class="card-body fs-6">
                                     <h2 class="card-title fs-5 fw-bold">高雄體驗會｜免費參加送帆布袋</h2>
                                     <p class="balooTamma text-secondary">2021-6-20</p>
-                                    <p class="card-text text-secondary text-align-justify">大家安安！謝謝每位贊助者的熱情支持，讓我們離夢想更進一步，我們將於下個月舉辦體驗會，歡迎各位踴躍參與！</p>
+                                    <p class="card-text text-secondary text-align-justify d-none d-md-block">大家安安！謝謝每位贊助者的熱情支持，讓我們離夢想更進一步，我們將於下個月舉辦體驗會，歡迎各位踴躍參與！</p>
                                     <a href="#" class="balooTamma-bold btn btn-link text-danger ps-0">MORE</a href="#">
                                   </div>
                                 </div>
                               </div>
                               <div class="row g-0 border-lightGray mb-3">
-                                <div class="col-md-4">
-                                  <img class="w-100 rounded-start" src="img/news03.jpg" alt="new01">
+                                <div class="col-sm-4">
+                                  <img class="img-fluid rounded-start" src="img/news03.jpg" alt="new01">
                                 </div>
-                                <div class="col-md-8">
+                                <div class="col-sm-8">
                                   <div class="card-body fs-6">
                                     <h2 class="card-title fs-5 fw-bold">高雄體驗會｜免費參加送帆布袋</h2>
                                     <p class="balooTamma text-secondary">2021-6-20</p>
-                                    <p class="card-text text-secondary text-align-justify">大家安安！謝謝每位贊助者的熱情支持，讓我們離夢想更進一步，我們將於下個月舉辦體驗會，歡迎各位踴躍參與！</p>
+                                    <p class="card-text text-secondary text-align-justify d-none d-lg-block">大家安安！謝謝每位贊助者的熱情支持，讓我們離夢想更進一步，我們將於下個月舉辦體驗會，歡迎各位踴躍參與！</p>
                                     <a href="#" class="balooTamma-bold btn btn-link text-danger ps-0">MORE</a href="#">
                                   </div>
                                 </div>
