--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
                       </form>
                 </div>
             </div>
-            <div class="col-md-4 ps-6">
+            <div class="col-md-4 ps-md-6 overflow-auto" style="height: 1400px;">
                 <div class="border rounded-3 p-3 mb-5">
                     <div class="d-flex align-items-center">
                         <img class="border border-4 border-warning rounded-pill me-3" src="img/store_img.jpg" alt="storeimage">
