--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>拼拼-募資</title>
+    <link rel="icon" href="img/logoIcon.ico" type="image/x-icon">
 
     <!--css link-->
     <link rel="stylesheet" href="css/all.css">
     <!--icon link-->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
+    <script src="https://kit.fontawesome.com/f2e0b5dc8e.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <!--導覽列-->
@@ -110,13 +110,13 @@
                     <div class="d-flex">
                         <p class="me-2" style="width: 60%;">
                             <a href="#" class="btn btn-lg btn-outline-secondary rounded-pill w-100 hover-warning">
-                                <span class="material-icons align-text-bottom pb-1">favorite</span>
+                                <i class="fas fa-heart"></i>
                                 追蹤專案
                             </a>
                         </p>
                         <p style="width: 40%;">
                             <a href="#" class="btn btn-lg btn-outline-secondary rounded-pill w-100">
-                                <span class="material-icons align-text-bottom pb-1">share</span>
+                                <i class="fas fa-share-alt"></i>
                                 分享
                             </a>
                         </p>
@@ -156,12 +156,14 @@
                         <p class="lh-lg">受就相法大夠局來畫師我只這然以放灣得的後人心年我物我年，或人有動與次出女親構算帶年行著所間女，外成認心香吸工並知日成展源大超時動為生葉衣致長山對精做英密差家他微熱建取示濟定心一，品定把別銀動，深青輪一物加，生明果。西業白老如天有表非民大條全那遊，李文遊、像香過元學須本致信校態麼資司媽人價在它，地他不我計孩廠然不大指勢生的華常簡岸然，人著母病石金萬得一果。</p>
                     </div>
                     <!--faq-->
-                    <div class="tab-pane fade" id="faq" role="tabpanel" aria-labelledby="faq-tab">
+                    <div class="tab-pane fade show active" id="faq" role="tabpanel" aria-labelledby="faq-tab">
                         <div class="accordion" id="accordionPanelsStayOpenExample">
-                            
                             <div class="accordion-item border-lightGray mb-3">
-                                <p class="accordion-header" id="faq-headingOne">
+                                <p class="accordion-header border-bottom" id="faq-headingOne">
                                     <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#faq-collapseOne" aria-expanded="true" aria-controls="faq-collapseOne">
+                                        <div class="d-inline-block bg-warning rounded-3 py-1 px-2 me-3">
+                                            <p class="balooTamma-bold mb-0">Q1</p>
+                                        </div>
                                         影片拍完之後可以編輯嗎？                                
                                     </button>
                                 </p>
@@ -172,8 +174,11 @@
                                 </div>
                             </div>
                             <div class="accordion-item border-lightGray mb-3">
-                              <p class="accordion-header" id="faq-headingTwo">
+                              <p class="accordion-header border-bottom" id="faq-headingTwo">
                                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq-collapseTwo" aria-expanded="false" aria-controls="faq-collapseTwo">
+                                    <div class="d-inline-block bg-warning rounded-3 py-1 px-2 me-3">
+                                        <p class="balooTamma-bold mb-0">Q2</p>
+                                    </div>
                                     有提供保固或維修服務嗎？
                                 </button>
                               </p>
@@ -184,8 +189,11 @@
                               </div>
                             </div>
                             <div class="accordion-item border-lightGray mb-3">
-                              <p class="accordion-header" id="faq-headingThree">
+                              <p class="accordion-header border-bottom" id="faq-headingThree">
                                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq-collapseThree" aria-expanded="false" aria-controls="faq-collapseThree">
+                                    <div class="d-inline-block bg-warning rounded-3 py-1 px-2 me-3">
+                                        <p class="balooTamma-bold mb-0">Q3</p>
+                                    </div>
                                     補充包底片要去哪裡購買呢？
                                 </button>
                               </p>
@@ -196,8 +204,11 @@
                               </div>
                             </div>
                             <div class="accordion-item border-lightGray mb-3">
-                                <p class="accordion-header" id="faq-headingFour">
+                                <p class="accordion-header border-bottom" id="faq-headingFour">
                                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq-collapseFour" aria-expanded="false" aria-controls="faq-collapseFour">
+                                    <div class="d-inline-block bg-warning rounded-3 py-1 px-2 me-3">
+                                        <p class="balooTamma-bold mb-0">Q4</p>
+                                    </div>
                                     印出來的拍立得照片需要充電嗎？
                                   </button>
                                 </p>
@@ -208,8 +219,11 @@
                                 </div>
                             </div>
                             <div class="accordion-item border-lightGray mb-3">
-                                <p class="accordion-header" id="faq-headingFive">
+                                <p class="accordion-header border-bottom" id="faq-headingFive">
                                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq-collapseFive" aria-expanded="false" aria-controls="faq-collapseFive">
+                                    <div class="d-inline-block bg-warning rounded-3 py-1 px-2 me-3">
+                                        <p class="balooTamma-bold mb-0">Q5</p>
+                                    </div>
                                     運送方式及付款方式有哪些呢？
                                   </button>
                                 </p>
@@ -220,8 +234,11 @@
                                 </div>
                             </div>
                             <div class="accordion-item border-lightGray mb-3">
-                                <p class="accordion-header" id="faq-headingSix">
+                                <p class="accordion-header border-bottom" id="faq-headingSix">
                                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq-collapseSix" aria-expanded="false" aria-controls="faq-collapseSix">
+                                    <div class="d-inline-block bg-warning rounded-3 py-1 px-2 me-3">
+                                        <p class="balooTamma-bold mb-0">Q6</p>
+                                    </div>
                                     退換貨方式及規則
                                   </button>
                                 </p>
@@ -278,7 +295,7 @@
                         </div>
                     </div>
                     <!--message-->
-                    <div class="tab-pane fade show active" id="message" role="tabpanel" aria-labelledby="message-tab">
+                    <div class="tab-pane fade" id="message" role="tabpanel" aria-labelledby="message-tab">
                         <p class="callout-warning py-3">只有本專案的贊助者才可以留言哦，如果有任何專案相關的問題，歡迎聯絡提案人！</p>
                         <!--pepole01-->
                         <div class="card mb-3 ">
@@ -348,7 +365,7 @@
                 </div>
 
             </div>
-            <div class="col-md-4 ps-md-6 overflow-auto" style="height: 1400px;">
+            <div class="col-md-4 ps-md-6 overflow-auto" style="height: 1200px;">
                 <div class="border rounded-3 p-3 mb-5">
                     <div class="d-flex align-items-center">
                         <img class="border border-4 border-warning rounded-pill me-3" src="img/store_img.jpg" alt="storeimage">
@@ -364,6 +381,7 @@
                             <img src="img/ytIcon.png" width="30px" alt="youtubeIcon">
                         </div>
                         <a href="#" class="btn btn-sm btn-outline-secondary rounded-pill fw-normal px-4">
+                            <i class="far fa-comment-dots"></i>
                             聯絡我們
                         </a>
                     </div>
@@ -480,8 +498,12 @@
                 </div>
             </div>
         </div>
-
     </div>
+    <footer class="footer mt-auto text-white py-5">
+        <div class="container text-center">
+            <span class="d-flex justify-content-center align-items-center">copyright © 拼拼 All rights reserved.</p>
+        </div>
+    </footer>
 
     <!--javascript link-->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
