--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             <div class="col-md-8">
                 <div class="tab-content mb-6" id="nav-tabContent">
                     <!--introduce-->
-                    <div class="tab-pane fade  " id="introduce" role="tabpanel" aria-labelledby="introduce-tab">
+                    <div class="tab-pane fade show active" id="introduce" role="tabpanel" aria-labelledby="introduce-tab">
                         <img class="img-fluid mb-4" src="img/p1.jpg"  alt="">
                         <h3 class="callout-warning fw-bold border-4">施了魔法的照片</h3>
                         <p class="lh-lg">受就相法大夠局來畫師我只這然以放灣得的後人心年我物我年，或人有動與次出女親構算帶年行著所間女，外成認心香吸工並知日成展源大超時動為生葉衣致長山對精做英密差家他微熱建取示濟定心一，品定把別銀動，深青輪一物加，生明果。西業白老如天有表非民大條全那遊，李文遊、像香過元學須本致信校態麼資司媽人價在它，地他不我計孩廠然不大指勢生的華常簡岸然，人著母病石金萬得一果。</p>
@@ -156,7 +156,7 @@
                         <p class="lh-lg">受就相法大夠局來畫師我只這然以放灣得的後人心年我物我年，或人有動與次出女親構算帶年行著所間女，外成認心香吸工並知日成展源大超時動為生葉衣致長山對精做英密差家他微熱建取示濟定心一，品定把別銀動，深青輪一物加，生明果。西業白老如天有表非民大條全那遊，李文遊、像香過元學須本致信校態麼資司媽人價在它，地他不我計孩廠然不大指勢生的華常簡岸然，人著母病石金萬得一果。</p>
                     </div>
                     <!--faq-->
-                    <div class="tab-pane fade show active" id="faq" role="tabpanel" aria-labelledby="faq-tab">
+                    <div class="tab-pane fade " id="faq" role="tabpanel" aria-labelledby="faq-tab">
                         <div class="accordion" id="accordionPanelsStayOpenExample">
                             <div class="accordion-item border-lightGray mb-3">
                                 <p class="accordion-header border-bottom" id="faq-headingOne">
